--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,8 @@
-name: database_sounds
+publish_to: 'none'
+name: drift_sounds
 version: 0.0.1
-description: "A library for storing sounds in a database. Backed by `flutter_audio_games` and `drift`."
-homepage: https://github.com/chrisnorman7/database_sounds
+description: "A library for storing `flutter_audio_games` sounds in a drift sqlite database."
+homepage: https://github.com/chrisnorman7/drift_sounds
 
 environment:
   sdk: ^3.11.0-200.1.beta
@@ -10,6 +11,8 @@ environment:
 dependencies:
   drift: ^2.30.0
   drift_flutter: ^0.2.8
+  drift_sounds_database:
+    path: ../drift_sounds_database
   flutter:
     sdk: flutter
   flutter_audio_games: ^0.50.1
@@ -18,12 +21,6 @@ dependencies:
   path_provider: ^2.1.5
 
 dev_dependencies:
-  build_runner: ^2.10.4
-  drift_dev: ^2.30.0
   flutter_lints: ^6.0.0
   flutter_test:
     sdk: flutter
-
-scripts:
-  watch: dart run build_runner watch -d
-  build: dart run build_runner build -d
