--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: drift_sounds
 version: 0.0.1
 description: "A library for storing `flutter_audio_games` sounds in a drift sqlite database."
 homepage: https://github.com/chrisnorman7/drift_sounds
-
+publish_to: "none"
 environment:
   sdk: ^3.11.0-200.1.beta
   flutter: ">=1.17.0"
